@@ -12,6 +12,9 @@ What's New in Python 2.6.1 alpha 1
 Core and Builtins
 -----------------
 
+- Issue #4209: Enabling unicode_literals and the print_function in the same
+  __future__ import didn't work.
+
 - On windows, os.chdir given unicode was not working if GetCurrentDirectoryW
   returned a path longer than MAX_PATH. (But It's doubtful this code path is
   really executed because I cannot move to such directory on win2k)
